--- a/.env.example
+++ b/.env.example
@@ -6,19 +6,22 @@
 
 # Google Places API 키 (필수)
 # https://console.cloud.google.com/apis/credentials
-VITE_GOOGLE_PLACES_API_KEY=your_google_places_api_key_here
+VITE_GOOGLE_PLACES_API_KEY=YOUR_GOOGLE_PLACES_API_KEY_HERE
 
 # Google Gemini AI API 키 (필수)
 # https://makersuite.google.com/app/apikey
-VITE_GEMINI_API_KEY=your_gemini_api_key_here
+VITE_GEMINI_API_KEY=YOUR_GEMINI_API_KEY_HERE
 
 # Brave Search API 키 (선택사항)
 # https://api.search.brave.com/app/keys
-VITE_BRAVE_SEARCH_API_KEY=your_brave_search_api_key_here
+VITE_BRAVE_SEARCH_API_KEY=YOUR_BRAVE_SEARCH_API_KEY_HERE
 
 # 백엔드 API URL (선택사항)
-# 기본값: http://localhost:8000/api
-VITE_API_BASE_URL=http://localhost:8000/api
+# 기본값: http://localhost:5000/api
+VITE_API_BASE_URL=http://localhost:5000/api
+
+# MongoDB Atlas 연결 문자열 (백엔드용)
+MONGODB_URI=mongodb+srv://<username>:<password>@<cluster-url>/<database>?retryWrites=true&w=majority
 
 # 개발/테스트 설정
 VITE_USE_MOCK_API=false
@@ -40,3 +43,7 @@ VITE_USE_REAL_SCRAPING=true
 # 3. Brave Search API
 #    - 트렌딩 데이터 수집용 (선택사항)
 #    - 무료 할당량: 월 2,000회 요청
+
+# 4. MongoDB Atlas
+#    - MongoDB Atlas에서 클러스터 생성
+#    - 백엔드 데이터 캐싱용 (선택사항)
