Fix API proxies for Google Places and Brave Search

--- a/vercel.json
+++ b/vercel.json
@@ -13,6 +13,10 @@
       "destination": "/api/gemini/:path*"
     },
     {
+      "source": "/api/places/:path*",
+      "destination": "https://places.googleapis.com/v1/:path*"
+    },
+    {
       "source": "/((?!api/.*).*)",
       "destination": "/index.html"
     }
